# QSkater-E

./: DataAnalysis.txt  README.md  StartLuanch.launch  StartRobot.bash  ttyUSB_Map.txt
src/robot_3dros/: CMakeLists.txt  package.xml  urdf.rviz
src/robot_3dros/config/: robot_gazebo.yaml
src/robot_3dros/launch/: empty_world.launch  robot_display.launch  robot_gazebo.launch  test.launch
src/robot_3dros/meshes/: body.STL  calf.STL  foot.STL  hip.STL  thigh.STL  wheel.STL  wheel_collision.STL
src/robot_3dros/src/: gazebo_joint_control.cpp  rviz_show.cpp
src/robot_3dros/urdf/: Hurdles.xacro  TestCollection  robot_3dros.xacro  robot_gazebo.xacro  robot_parameter.xacro
src/robot_3dros/worlds/: world.world
src/robot_joy/: CMakeLists.txt  QSkater手柄功能定义.docx  package.xml
src/robot_joy/config/: joy_gait_parameter.yaml
src/robot_joy/launch/: StartJoy.launch
src/robot_joy/src/: robot_joy(复件).cpp  robot_joy.cpp
src/robot_main/: CMakeLists.txt  package.xml
src/robot_main/config/: robot_control.yaml  robot_control_sim.yaml
src/robot_main/launch/: StartIMU.launch  StartMain.launch
src/robot_main/qpOASES-3.2.1/src/: Utils.cpp
src/robot_main/src/: CJW_FootMeasure.cpp  CJW_FootMeasure.h  Joint_Manage.cpp  Joint_Manage.h  Motor_Driver.cpp  Motor_Driver.h  Servo_DYNAMIXEL.cpp  Servo_DYNAMIXEL.h  UserRobotStructure.cpp  UserRobotStructure.h  Wheel_Driver.cpp  Wheel_Driver.h  main.cpp
src/robot_main/src/driver/: CJW_DYNAMIXEL.cpp  CJW_DYNAMIXEL.h  CJW_Serial.cpp  CJW_Serial.h  CJW_herkulex_drive.cpp  CJW_herkulex_drive.h  CJW_mycan.cpp  CJW_mycan.h  Elmo_gold_canopen.cpp  Elmo_gold_canopen.h
src/robot_main/src/lwa_robot/: CJW_BranchArmType.cpp  CJW_BranchArmType.h  CJW_BranchBased.cpp  CJW_BranchBased.h  CJW_BranchLegType.cpp  CJW_BranchLegType.h  CJW_BranchWheelType.cpp  CJW_BranchWheelType.h  CJW_GaitBased.cpp  CJW_GaitBased.h  CJW_GaitToRobotBased.cpp  CJW_GaitToRobotBased.h  CJW_Gait_Bip.cpp  CJW_Gait_Bip.h  CJW_Gait_Hex.cpp  CJW_Gait_Hex.h  CJW_Gait_Qua.cpp  CJW_Gait_Qua.h  CJW_LWABranch.cpp  CJW_LWABranch.h  CJW_LWARobot.cpp  CJW_LWARobot.h  CJW_RigidBody.cpp  CJW_RigidBody.h  Eigen_Nonlinear_Equ.cpp  Eigen_Nonlinear_Equ.h  Force_Quadprog.cpp  Force_Quadprog.h
src/robot_main/unitree_motor_ctrl/: check.c
src/robot_msgl/: CMakeLists.txt  package.xml
src/robot_msgl/msg/: ControlStruct.msg  MotorStruct.msg  RobotStruct.msg  TipStruct.msg
src/robot_msgl/srv/: ComputeControl.srv  MotorControl.srv  RobotCommand.srv
src/robot_remote_qt5/: CMakeLists.txt  package.xml
src/robot_remote_qt5/src/: jointtest.cpp  jointtest.h  jointtest.ui  main.cpp  messagethread.cpp  messagethread.h  qtmain.cpp  qtmain.h  qtmain.ui
src/rviz_calib_panel/: CMakeLists.txt  package.xml  plugin_description.xml
src/rviz_calib_panel/src/: calibpanel.cpp  calibpanel.h  calibpanel.ui
